# ChangeLog for net-misc/pen
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/pen/ChangeLog,v 1.20 2014/03/05 07:36:36 kensington Exp $

  05 Mar 2014; Michael Palimaka <kensington@gentoo.org> -pen-0.18.0-r1.ebuild:
  Remove old.

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> pen-0.20.1.ebuild:
  Stable for x86, wrt bug #502904

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> pen-0.20.1.ebuild:
  amd64 stable, bug #502904

*pen-0.20.1 (16 Dec 2013)

  16 Dec 2013; Patrick Lauer <patrick@gentoo.org> +pen-0.20.1.ebuild:
  Bump

  02 Oct 2012; Michael Palimaka <kensington@gentoo.org> -pen-0.17.1.ebuild:
  Remove old.

  28 Sep 2012; Agostino Sarubbo <ago@gentoo.org> pen-0.18.0-r1.ebuild:
  Stable for amd64, wrt bug #397179

  28 Sep 2012; Agostino Sarubbo <ago@gentoo.org> pen-0.18.0-r1.ebuild:
  add ssl as RDEPEND

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pen-0.18.0-r1.ebuild:
  x86 stable wrt bug #397179

*pen-0.18.0-r1 (23 Jun 2011)

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -pen-0.18.0.ebuild,
  +pen-0.18.0-r1.ebuild:
  EAPI4fy and ssl use flag. Bug #372505. Thanks to T-Dawg <tgates81@gmail.com>
  for the patch

*pen-0.18.0 (12 Sep 2009)

  12 Sep 2009; Patrick Lauer <patrick@gentoo.org> +pen-0.18.0.ebuild:
  Bump

  25 Jan 2008; Raúl Porcel <armin76@gentoo.org> -pen-0.12.1.ebuild,
  -pen-0.15.0.ebuild, -pen-0.17.0.ebuild, pen-0.17.1.ebuild:
  x86 stable, remove old

  15 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning to m-needed, as beu is being retired (#66608).

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*pen-0.17.1 (22 Aug 2006)

  22 Aug 2006; Konstantin Arkhipov <voxus@gentoo.org> +pen-0.17.1.ebuild:
  Version bump, ~amd64 introduced.

*pen-0.17.0 (10 Jan 2006)

  10 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +pen-0.17.0.ebuild:
  0.17.0 version bump.
