@@ -2,24 +2,26 @@
 Hash: SHA256
 
 DIST pen-0.20.1.tar.gz 160325 SHA256 eb5060589ee34f55b54d6bf203b10094fddb1d15f14581a59e4520367f9dc8fc SHA512 7626d2677cbfea2ec18de194e02d6781d70fc3db1047cf130b576b4d3b2d379d3173851d3c33434b3ac6669810c3322ba47b36cdbabcafc40ae9b31f5406b999 WHIRLPOOL 1be990a377ff0e8aa0bc1bcf23c85634337a7e31268df707148493dc8305e8d762ff6d9741148a04fb0a0962ea836e7f2052629b271edf6f59f24b1c33b97009
+DIST pen-0.25.1.tar.gz 150231 SHA256 2dd9ca3b2f8057b9e59ddf07000a34649835ad23b45e6d34e8b9422d3dcb5270 SHA512 712c5899eb0ab20df1c91653328a63fe1715f0412e434aa08229555ff725bd54eb4732be1176f2cea02761db37a5ae241a4f790ca803fc1002be2bf65bc6269b WHIRLPOOL 22fb7c8c88415e303158e6a3fe203dd9a664be13f9cf8bdafe20502c07e2f06205d12000ed4b65a3fbaf4ee61d0a015b0e4d1b72a592b66814fb8114932f78bd
 EBUILD pen-0.20.1.ebuild 585 SHA256 c88429648f10086c720a7534fb1922aa2e6fa340891fbe3997fb2ddbd2712644 SHA512 be9592944ccd9a7225200a960329a73f180d6f94904bfd709f43d2a836fb978fdb7f2175e5e5ac0d7c684e75fbb43872e31ff5005f66faad8bc9160cf2ac93af WHIRLPOOL cbd0d6b6f39522eabe719db2b0e2eca1e339c40fddc259cd2f77b3ce2f491af1cc7416fc6004216e6b71a9ac52ad345b2df37aae074c99f71a5efb3899148f0f
-MISC ChangeLog 2427 SHA256 4d5292b7528ea12e1e33ec932d33fa96bac57d8411295ab5e8da7e1cf2cd4c3b SHA512 327b8edecbe455ac7c8359c2007cba083d59acd5ddf646bac1c799aebbc11dd3b920ea580ab6ad3512321f9fc2cf6f53bd513d9a700b69385594c3bb0e9fbe98 WHIRLPOOL 3aa0a01fe1d61d131e9bf47dcede2c5b4ffc5a5b7a07eb8e8e10c2b1a6fca12aec7d34969344e223c1cac806625c4b9ceebd1420c62d39ad67ed6142f07feb0c
+EBUILD pen-0.25.1.ebuild 613 SHA256 1a12c971e963bb8df36de823d4feba16ea1525ff533e07974fb40bad08580397 SHA512 ebc29e26768b9aae818ca10cdab09fdf156f49995bc28dffd169ba1e27523014c6bf62c875922dab5b8d28bc7ca1e42214be6daa1cadb64acdaf1846603274aa WHIRLPOOL 79944fa63305dc7c1fe60158d929fe28eda11880c9eb2f442888ab8629ff5870ec6db9abd7a8b99ce52e1d0785135414948d3928fad10c2cdab98425e0c63c15
+MISC ChangeLog 2563 SHA256 4cb8650d068c43e329625c5d4537f2275e95592eb7cd54d51c664abe91e055b0 SHA512 d35f863ad95489aeb711158c2e2114fb27c29acf48ea641a31d3faca18f19f19db484731fbb708baa6364787e530d36984012c0ccd62b08daa29fe573378d9d1 WHIRLPOOL ac0229a4c25ca05f44a6cf703d6c9153ee44c739848a26be4be32df1edc8024c605b7aca6913e37f6869e7f25afca3cfed6a98f4e73da52f982f7f8ed4e7b198
 MISC metadata.xml 214 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5 SHA512 701b8c51f43f8660d40700929c243a2dae9f19dcbc7b8eca877e20eadc1ae2e0c84f7c7d8c3cb576055c1a49a55e9c759ef469eeda67026ce252d341937f6691 WHIRLPOOL 977119e736e0795137df14faae681f7fa07ba8297a19ef4a7d7b93de7efceaed16f7103f179a762be41b8849c33c535b55d16d2fd0ea795df0525592752e0156
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJiBAEBCABMBQJTFtQFRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+iQJiBAEBCABMBQJUPpuyRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
 MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7AQbD/kBH14CAv7KKMQNMmXFPpSTLigQVdKZjOH+44KNPkHslCYcZtdNNv6VNixe
-2YX1oNU6dli+Gjg0dxcHYO5zo0Vykk+CI9CzAfgjRIz1guzuNtzMu0syI6JxPOpN
-s3qGydvzkPxKKGcHkzMy5KSVQgDnbIMeKFCmgok/RrEwudRNW/NwLuYEnVDQDUWA
-kyjAx8JPCz+WKFDHnf/TZauS0N34K3ZxFMeqyTYyGrUEppT46YxnVcxYi/xg4bzO
-nRAp2LdIPmX0i0jd/ngnWfVdaqMMjpI5NNFp0i+SYSR171piOQr515tapBpGeR73
-l0lvS2tFfI0YMrQlMaJfdUTWn9x1+s9co8y28CbtFg3/rKrPxLRquEVkf0QDJJT1
-chE07aOMUpnooNLwtWz/YkWrOgtQi2i7R7uZyyiozPCblyetOAIxgM0rufHkYJ3N
-dv7QYlEeX+aMfyLqBvQqsiMkMZOEzcauqL6X4cGianyA5alz5TgEBTt5WHudOC6g
-+2uEovs0gPvMuxDVgGdHVIVv9Hhfh5fLcSBNrTQAg4KB9whLRg/WzuwaBBPqUr/h
-+mplL8/+a7YmKl3rPfG8wFnxBC2lTgE4PD5FM/3JERgV0LucDPLA8k6SiMx0I43i
-X7LPcrMZjEWYHF83n9NM6Oxvmuc7pG6E4S/MZ/VQdkoF76ypRA==
-=XDDf
+7KJrD/4j6C0yRj6zqolXC4eoOs8VkuIYkUEcqKwEc8wU+61a+1btuZ/l/V6sNMd3
+QGxbLevc4yWBD3mKDSbSSJBQ4suXQoNr3auwvthOe1qgJDPTGz6torH/daIk8M+h
+dLRlkYz48SwFhDHlZ2oVecgSGlr8oIySzYn2wEDyByMLH7xnOxCAIKeIybBsKMLw
+rTSSI3whp+oQw1oYGt4cdneDxibavyfHJQm0T34GjTID6MWhMXH61Vo/ftEm2Yry
+Q2zFOEaG9hLDYBjq2kAckJAhwZ5xOwN65x4vvfxOxdZroRj/LNfAcu/yB5jq3Plv
+jPGT4FHpoTXVvNDTT0Y6vhu0qlQi5itMNaD0x9RASQrRgv1tdaphMvlhOJTBfsvR
+CHgn0UN7EKHJR8uQH1eWO1S9BrPcCTQ3eVB+3bGCoW0K4jlFK7lmCY14NQxjorGy
+j+K2YL9BqcOQJ24SBvODqRuBV47MvR+vUeKOV4PWgnlWi4AtsXTWiygZLgUpuQK1
+a4tkwwHdPvjfJGvgFhzGukFiyQfhU7YmTSQULAWlPn80a9yeWEXFhmnFoMEBDRbz
+u8RGh1WwGb6yVNu4Hyfb3nbqbzc3GBVR/FZQEJN2yvWLYx9rJ/WvdB8JnKHS2tk6
+4rHuRBOz2rbFUxQGYDIZ1I9lrKYL+q2vhixOuAJdZx0bURe7RA==
+=POcF
 -----END PGP SIGNATURE-----
